hphp/test/zend/good/tests/classes/ctor_in_interface_01.php.expectf

Fatal error: Declaration of implem::__construct() must be compatible with that of constr::__construct() in %s/ctor_in_interface_01.php on line 7
